--- a/FrontEnd/challet/src/App.css
+++ b/FrontEnd/challet/src/App.css
@@ -1,7 +1,16 @@
 #root {
-  max-width: 1280px;
+  width: 100%; /* 화면 크기에 맞춰 넓이 조정 */
   margin: 0 auto;
   text-align: center;
+}
+/* CSS 코드에 추가 */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE 및 Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
 
 .logo {
