feat: 챌렛뱅크 연결 및 파비콘,폰트 추가

--- a/FrontEnd/challet/src/assets/index.css
+++ b/FrontEnd/challet/src/assets/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Noto Sans KR', Inter, system-ui, Avenir, Helvetica, Arial,
+    sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -32,6 +33,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-family: inherit; /* :root의 폰트 설정을 상속 */
 }
 
 h1 {
