--- a/FrontEnd/challet/src/components/Button/Button.css
+++ b/FrontEnd/challet/src/components/Button/Button.css
@@ -13,9 +13,9 @@
 
 /* 비활성화 버튼 */
 .custom-button.disabled {
-  background: #c8c8c8;
+  background-color: #d2d2d2;
+  color: #ffffff;
   cursor: not-allowed;
-  color: #666;
 }
 
 /* 하단 고정 버튼 */
