--- a/FrontEnd/challet/src/assets/fonts/font.css
+++ b/FrontEnd/challet/src/assets/fonts/font.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 300;
@@ -31,4 +31,40 @@
   font-style: normal;
   font-weight: 700;
   src: url('./NotoSansKR-Bold.ttf') format('truetype');
+} */
+
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 300;
+  font-style: normal;
+
+  src: url('./Pretendard-Light.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 400;
+  font-style: normal;
+
+  src: url('./Pretendard-Regular.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 500;
+  font-style: normal;
+
+  src: url('./Pretendard-Medium.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 600;
+  font-style: normal;
+
+  src: url('/Pretendard-SemiBold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 700;
+  font-style: normal;
+
+  src: url('./Pretendard-Bold.ttf') format('truetype');
 }
