--- a/FrontEnd/challet/src/assets/index.css
+++ b/FrontEnd/challet/src/assets/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  font-family: 'Noto Sans KR', Inter, system-ui, Avenir, Helvetica, Arial,
+  font-family: 'Pretendard', Inter, system-ui, Avenir, Helvetica, Arial,
     sans-serif;
   line-height: 1.5;
   font-weight: 400;
