--- a/FrontEnd/challet/src/components/Keypad/Keypad.css
+++ b/FrontEnd/challet/src/components/Keypad/Keypad.css
@@ -1,7 +1,12 @@
 .pin-display-container {
   display: flex;
   justify-content: center;
-  margin-top: 120px;
+  position: absolute; /* 절대 위치 설정 */
+  top: 40%; /* 부모 요소의 50% 지점에 위치 */
+  left: 50%; /* 부모 요소의 중앙으로 위치 */
+  transform: translate(-50%, -50%); /* 가운데 정렬 */
+  z-index: 10; /* 키패드보다 앞에 표시되도록 설정 */
+  padding-bottom: 20px; /* 키패드와의 간격을 확보 */
 }
 
 .pin-circle {
@@ -22,10 +27,11 @@
   left: 0;
   right: 0;
   width: 100%;
-  max-width: 360px;
+  /* max-width: 360px; */
   margin: 0 auto;
   background-color: white;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1; /* 비밀번호 표시보다 뒤에 나오도록 설정 */
 }
 
 .SecureKeyboard_keyboard {
@@ -45,7 +51,8 @@
 }
 
 .keypad-button {
-  width: 120px;
+  /* width: 120px; */
+  width: 100%;
   height: 80px;
   border-radius: 8px;
   margin: 4px;
@@ -66,7 +73,7 @@
 
 .confirm-button {
   position: fixed;
-  bottom: 360px; /* 키패드 위에 붙도록 조정 (keypad-container 높이에 따라 조정) */
+  bottom: 360px;
   left: 0;
   right: 0;
   width: 100%;
@@ -83,6 +90,6 @@
 }
 
 .confirm-button:disabled {
-  background-color: #cccccc; /* 비활성화 상태일 때 색상 */
+  background-color: #cccccc;
   cursor: not-allowed;
 }
