--- a/FrontEnd/challet/src/components/Keypad/Keypad.css
+++ b/FrontEnd/challet/src/components/Keypad/Keypad.css
@@ -27,8 +27,8 @@
   left: 0;
   right: 0;
   width: 100%;
-  /* max-width: 360px; */
-  margin: 0 auto;
+  max-width: 640px; /* max-width 640px 설정 */
+  margin: 0 auto; /* 중앙 배치 */
   background-color: white;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1; /* 비밀번호 표시보다 뒤에 나오도록 설정 */
