--- a/FrontEnd/challet/src/components/Keypad/Keypad.css
+++ b/FrontEnd/challet/src/components/Keypad/Keypad.css
@@ -1,12 +1,31 @@
+.keypad-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+.keypad-container {
+  width: 100%;
+  max-width: 640px;
+  margin: 0 auto;
+  background-color: white; /* 키패드 전체 배경 흰색 */
+
+  height: 500px; /* 원하는 크기로 조절 */
+  display: flex;
+  flex-direction: column; /* 세로 정렬 */
+  justify-content: space-between; /* 위, 아래 끝에 배치 */
+}
+
 .pin-display-container {
   display: flex;
   justify-content: center;
-  position: absolute; /* 절대 위치 설정 */
-  top: 40%; /* 부모 요소의 50% 지점에 위치 */
-  left: 50%; /* 부모 요소의 중앙으로 위치 */
-  transform: translate(-50%, -50%); /* 가운데 정렬 */
-  z-index: 10; /* 키패드보다 앞에 표시되도록 설정 */
-  padding-bottom: 20px; /* 키패드와의 간격을 확보 */
+  margin-top: 15%; /* 약 40px (16px * 2.5) */
 }
 
 .pin-circle {
@@ -19,19 +38,6 @@
 
 .filled {
   background-color: #000;
-}
-
-.keypad-container {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  max-width: 640px; /* max-width 640px 설정 */
-  margin: 0 auto; /* 중앙 배치 */
-  background-color: white;
-  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-  z-index: 1; /* 비밀번호 표시보다 뒤에 나오도록 설정 */
 }
 
 .SecureKeyboard_keyboard {
@@ -51,7 +57,6 @@
 }
 
 .keypad-button {
-  /* width: 120px; */
   width: 100%;
   height: 80px;
   border-radius: 8px;
@@ -63,12 +68,7 @@
 }
 
 .keypad-button:active {
-  background-color: rgba(
-    0,
-    204,
-    204,
-    0.1
-  ); /* 클릭할 때 투명도 50% 적용된 #00CCCC */
+  background-color: rgba(0, 204, 204, 0.1);
 }
 
 .confirm-button {
@@ -92,4 +92,13 @@
 .confirm-button:disabled {
   background-color: #cccccc;
   cursor: not-allowed;
+}
+.message-container {
+  text-align: center;
+  height: 80px; /* 고정된 높이를 설정하여 메시지가 없을 때도 동일한 공간 확보 */
+  font-size: 16px;
+  color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
