feat: 거래내역 상세 줄바꿈 허용

--- a/FrontEnd/challet/src/assets/App.css
+++ b/FrontEnd/challet/src/assets/App.css
@@ -13,6 +13,15 @@
   display: none; /* Chrome, Safari, Opera */
 }
 
+@keyframes scrollText {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
